--- a/Fotos/index.html
+++ b/Fotos/index.html
@@ -13,8 +13,9 @@
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
-
+<h1> MODIFICIACIONES JEJE</h1>
 <body bgcolor="#C0A4F8">
+  <h1> MODIFICIACIONES JEJE</h1>
  <center>
     <h1>Imagenes</h1>
 
