--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </style>
 </head>
 <body>
+    <h1> MODIFICIACIONES JEJE</h1>
     <center> <h1>ㅤㅤMenu de Practicas</h1><hr>
     <br>
     <ol> 
