Jeje uwu bestie

--- a/Hipervinculos/index.html
+++ b/Hipervinculos/index.html
@@ -5,26 +5,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hipervínculos</title>
+
+  <style>
+    body{
+      background-color: #C0A4F8;
+    }
+
+    .link-1{
+            color: rgb(0, 0, 0);
+        }
+        .link-2{
+            color: rgb(0, 0, 0);
+        }
+        .link-3{
+            color: rgb(0, 0, 0);
+        }
+        .link-4{
+            color: rgb(0, 0, 0);
+        }
+        .link-5{
+            color: rgb(0, 0, 0);
+        }
+        
+        .arriba-1{
+            color: rgb(92, 52, 238);
+        }
+        .arriba-2{
+            color: rgb(92, 52, 238);
+        }
+        .arriba-3{
+            color: rgb(92, 52, 238);
+        }
+        .arriba-4{
+            color: rgb(92, 52, 238);
+        }
+        .arriba-5{
+            color: rgb(92, 52, 238);
+        }
+        
+  </style>
 </head>
-<body bgcolor="#b0bfed">
+<body>
 <center><h1>Clase de Valores</h1></center>
 <hr>
-<a name="arriba"><h2>Tema de Clase</h2></a>
+
+<a name="arriba"><h2>ㅤTemas en clase</h2></a>
 
 <ul>
 
- <a href="#1" <li>Pasos</li> </a><br>
+ <a href="#1" class="link-1"><li>Pasos</li> </a><br>
  
- <a href="#2" <li>Metodo</li></a><br>
+ <a href="#2" class="link-2"><li>Metodo</li></a><br>
  
- <a href="#3" <li>Factores</li> </a><br>
+ <a href="#3" class="link-3"><li>Factores</li> </a><br>
  
- <a href="#4" <li>Ciencias Naturales</li> </a><br>
+ <a href="#4" class="link-4"><li>Ciencias Naturales</li> </a><br>
  
- <a href="#5" <li>Ciancias Sociales</li> </a><br>
+ <a href="#5" class="link-5"><li>Ciancias Sociales</li> </a><br>
  
 </ul>
-<hr>
+
+<hr >
 <a name="1"><h3>Pasos:</h3></a>
 <table border="0">
   <tr>
@@ -32,9 +73,9 @@
  
   </tr>
 </table> <br>
- <button ><a href="#arriba">Arriba </a> </button>
+ <button ><a href="#arriba" class="arriba-1">Arriba </a> </button>
 
- <hr>
+ 
  <a name="2"><h3>Metodo:</h3></a>
 <table border="0">
   <tr>
@@ -42,9 +83,9 @@
  
   </tr>
 </table> <br>
- <button ><a href="#arriba">Arriba </a> </button>
+ <button ><a href="#arriba" class="arriba-2">Arriba </a> </button>
 
- <hr>
+ 
  
 <a name="3"><h3>Factores:</h3></a>
 <table border="0">
@@ -53,8 +94,8 @@
  
   </tr>
 </table> <br>
- <button ><a href="#arriba">Arriba </a> </button>
- <hr>
+ <button ><a href="#arriba" class="arriba-3">Arriba </a> </button>
+ 
  
 <a name="4"><h3>Ciencias Naturales:</h3></a>
 <table border="0">
@@ -63,9 +104,9 @@
  
   </tr>
 </table> <br>
- <button ><a href="#arriba">Arriba </a> </button>
- <hr>
+ <button ><a href="#arriba" class="arriba-4">Arriba </a> </button>
  
+
  
 <a name="5"><h3>Ciencias Sociales:</h3></a>
 <table border="0">
@@ -74,8 +115,8 @@
  
   </tr>
 </table> <br>
- <button ><a href="#arriba">Arriba </a> </button>
- <hr>
+ <button ><a href="#arriba" class="arriba-5">Arriba </a> </button>
+ 
  
  
  
